# graduation-project

./: .gitignore  AGENTS.md  CONSTRUCTIONSITE10K_DATASET_STATS.md  POINT1_BASELINE_RESULTS.md  README.md  code_review.md  environment.yml  pyproject.toml
configs/system/: providers.example.json
docs/: 00_project_context.md  01_project_scope.md  02_repo_blueprint.md  03_benchmark_constructionsite10k.md  04_point1_spec.md  05_point2_spec.md  06_external_refs.md  07_build_sequence.md  08_first_codex_prompt.md  09_point1_foundation_status.md  10_balanced_15x5_subset.md  11_beginner_workflow.md  12_point1_api_baseline.md  13_local_qwen_baseline.md  14_opening_report_point1_point2_summary.md  15_point1_progress_log.md
scripts/: __init__.py  analyze_point1_baselines.py  build_balanced_15x5_registry.py  build_balanced_subset_registry.py  dev.py  run_point1_api_baseline.py  run_point1_eval.py  run_point1_local_qwen_baseline.py  run_point1_rule1_pipeline.py  run_point1_rule1_single_image.py
src/benchmark/: __init__.py
src/common/: __init__.py
src/eval/: __init__.py
src/finetune/: __init__.py
src/knowledge/: __init__.py
src/point1/: __init__.py
src/point2/: __init__.py
src/system/: __init__.py
tests/: __init__.py  conftest.py  test_package_layout.py
tests/benchmark/: test_balanced_15x5_registry.py  test_balanced_dev_test_registries.py  test_cs10k_loader.py  test_cs10k_parquet.py  test_cs10k_parser.py  test_cs10k_registry.py  test_cs10k_subsets.py
tests/common/: test_bbox.py  test_point1_schema.py
tests/eval/: test_constructionsite10k_bridge.py  (+3 more)
(+82 files in other folders)
