[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graduation-project"
version = "0.1.0"
description = "Construction safety benchmark foundation for the graduation project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.108,<2", "pyarrow>=23,<24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
